wdd230/chamber/css/directory.css
.list {
    margin: 20px;
}
.list section div a img {
    display: none;
}
.list .tinyurl {
    text-decoration: none;
    display: block;
}
.grid {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
    grid-template-rows: 235px 380px 370px;
    grid-gap: 10px;
    align-items: flex-start;
}
.grid section {
    width: 100%;
}
.grid .tinyurl {
    display: none;
}
.grid section h2 {
    display: none;
}
.grid section div {
    text-align: center;
}
.grid section div a img {
    width: 80%;
    transition: transform .4s;
}
.grid section div a img:hover {
    transform: scale(1.2);
}
.grid section {
    border: 1px solid rgba(0, 0, 0, 0.1);
    background-color: #ffffff;
    padding: 25px;
    text-align: center;
}

.menu button {
	padding: .7rem;
}
.menu {
	margin: 1rem auto;
	padding: 0.5rem;
	text-align: center;
}

